feat: update app startup routing

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body class="font-sans w-screen h-screen m-0 p-0">
-    <app-root></app-root>
+    <app-root class="gentle-flex h-full"></app-root>
   </body>
 </html>
